--- a/public_html/templates/default_site/home.group/index.html
+++ b/public_html/templates/default_site/home.group/index.html
@@ -351,7 +351,9 @@ main section.team div p {
 	
 	<div>
 		<!-- <p>讓一個人也要好好吃飯的便當</p> -->
-		<h2>「你好，初次見面。」</h2>
+		<!-- <h2>「你好，初次見面。」</h2> -->
+    <h2>「Coming up soon...」</h2>
+
 
 		<!-- <p>也许有些话，不知道怎么说出口，那就用料理来好好表现吧！让每一口都是一句，谢谢！</p> -->
 	</div>
