--- a/public_html/templates/default_site/home.group/index.html
+++ b/public_html/templates/default_site/home.group/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>小夜盲咖啡館</title>
+<title>小夜盲 NIGHTBLINDNESSCAFÉ</title>
 
 <link rel="stylesheet" type="text/css" href="{site_url}libraries/css/normalize.min.css"/>
 <link rel="stylesheet" type="text/css" media="screen" href="{site_url}libraries/css/icon-fonts.css"/>
@@ -351,8 +351,8 @@ main section.team div p {
 	
 	<div>
 		<!-- <p>讓一個人也要好好吃飯的便當</p> -->
-		<!-- <h2>「你好，初次見面。」</h2> -->
-    <h2>「Coming up soon...」</h2>
+		<h2>「你好，初次見面。」</h2>
+    <!-- <h2>「Coming up soon...」</h2> -->
 
 
 		<!-- <p>也许有些话，不知道怎么说出口，那就用料理来好好表现吧！让每一口都是一句，谢谢！</p> -->
@@ -363,13 +363,13 @@ main section.team div p {
 
 		<time>營業時間</time>
 
-		<div class="order">15:00 PM － 00:00 AM</div>
+		<div class="order">晚上7:00pm － 次日2:00pm</div>
 
 	</div>
 
 		<!-- <img id="backstretch" src="{site_url}assets/images/uploads/BAO-SOHO_Finalcropped.jpg"/> -->
 	
-	<img id="backstretch" src="{site_url}assets/images/uploads/STUDIO_FLM_0005.jpg"/>
+	<img id="backstretch" src="{site_url}assets/images/uploads/DSCF8929-1.jpg"/>
 
 </header>
 
