--- a/public_html/templates/default_site/home.group/index.html
+++ b/public_html/templates/default_site/home.group/index.html
@@ -3,25 +3,20 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>小夜盲 NIGHTBLINDNESSCAFÉ</title>
-
-<link rel="stylesheet" type="text/css" href="{site_url}libraries/css/normalize.min.css"/>
-<link rel="stylesheet" type="text/css" media="screen" href="{site_url}libraries/css/icon-fonts.css"/>
-<link rel="stylesheet" type="text/css" media="screen" href="{site_url}libraries/css/aos.css"/>
-
-<link rel="apple-touch-icon-precomposed" sizes="57x57" href="{site_url}libraries/icons/favicon/apple-touch-icon-57x57.png" />
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="{site_url}libraries/icons/favicon/apple-touch-icon-114x114.png" />
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{site_url}libraries/icons/favicon/apple-touch-icon-72x72.png" />
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{site_url}libraries/icons/favicon/apple-touch-icon-144x144.png" />
-<link rel="apple-touch-icon-precomposed" sizes="60x60" href="{site_url}libraries/icons/favicon/apple-touch-icon-60x60.png" />
-<link rel="apple-touch-icon-precomposed" sizes="120x120" href="{site_url}libraries/icons/favicon/apple-touch-icon-120x120.png" />
-<link rel="apple-touch-icon-precomposed" sizes="76x76" href="{site_url}libraries/icons/favicon/apple-touch-icon-76x76.png" />
-<link rel="apple-touch-icon-precomposed" sizes="152x152" href="{site_url}libraries/icons/favicon/apple-touch-icon-152x152.png" />
-<link rel="icon" type="image/png" href="{site_url}libraries/icons/favicon/favicon-196x196.png" sizes="196x196" />
-<link rel="icon" type="image/png" href="{site_url}libraries/icons/favicon/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/png" href="{site_url}libraries/icons/favicon/favicon-32x32.png" sizes="32x32" />
-<link rel="icon" type="image/png" href="{site_url}libraries/icons/favicon/favicon-16x16.png" sizes="16x16" />
-<link rel="icon" type="image/png" href="{site_url}libraries/icons/favicon/favicon-128.png" sizes="128x128" />
+<meta name="description" content="屡获殊荣的旅拍式写真摄影及婚纱摄影工作室,提供广州、深圳、三亚、海口地区的高品质影像服务。">
+<link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png" />
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png" />
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72.png" />
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144.png" />
+<link rel="apple-touch-icon-precomposed" sizes="60x60" href="apple-touch-icon-60x60.png" />
+<link rel="apple-touch-icon-precomposed" sizes="120x120" href="apple-touch-icon-120x120.png" />
+<link rel="apple-touch-icon-precomposed" sizes="76x76" href="apple-touch-icon-76x76.png" />
+<link rel="apple-touch-icon-precomposed" sizes="152x152" href="apple-touch-icon-152x152.png" />
+<link rel="icon" type="image/png" href="favicon-196x196.png" sizes="196x196" />
+<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+<link rel="icon" type="image/png" href="favicon-128.png" sizes="128x128" />
 <meta name="application-name" content="&nbsp;"/>
 <meta name="msapplication-TileColor" content="#FFFFFF" />
 <meta name="msapplication-TileImage" content="mstile-144x144.png" />
@@ -30,23 +25,11 @@
 <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
 <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
 
-<link rel="apple-touch-icon" sizes="57x57" href="{site_url}libraries/icons/favicon/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="{site_url}libraries/icons/favicon/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="{site_url}libraries/icons/favicon/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="{site_url}libraries/icons/favicon/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="{site_url}libraries/icons/favicon/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="{site_url}libraries/icons/favicon/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="{site_url}libraries/icons/favicon/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="{site_url}libraries/icons/favicon/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="{site_url}libraries/icons/favicon/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="{site_url}libraries/icons/favicon/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="{site_url}libraries/icons/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="{site_url}libraries/icons/favicon/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="{site_url}libraries/icons/favicon/favicon-16x16.png">
-<link rel="manifest" href="{site_url}libraries/icons/favicon/manifest.json">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-<meta name="theme-color" content="#ffffff">
+<title>大屈</title>
+
+{exp:minimee:css}
+<link rel="stylesheet" type="text/css" href="{site_url}libraries/css/normalize.css"/>
+{/exp:minimee:css}
 
 
 <style>
@@ -62,74 +45,96 @@
     box-sizing: border-box;
 }
 
-p {
-  /*-webkit-margin-before: 0em;*/
-  /*-webkit-margin-after: 0em;*/
-}
-
 ul {
   -webkit-padding-start: 0px;
 }
 
-body {
-  font-family: "Ideal Sans SSm A", "Ideal Sans SSm B", "Avenir", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
-  font-style: normal;
-  font-weight: 300;
-  font-size: 62.5%;
-  letter-spacing: 1px;
+ol {
+  /*-webkit-padding-start: 0px;*/
 }
 
+body {
+  font-family: "Gotham Narrow SSm A", "Gotham Narrow SSm B", "sourcehansans-tc", "sourcehansans-sc", "Avenir", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
+  font-style: normal;
+  font-size: 62.5%;
+  padding-left: 25px;  
+}
 
 /* ==========================================================================
    General Typography
    ========================================================================== */
 
 *, *:before, *:after {
-  /*letter-spacing: 1px;*/
+  letter-spacing: 0.5px;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-size: 1.1em;
+  letter-spacing: 2px;
+  font-size: 2em;
 }
 
 h1 a, h1 span {
   font-size: 1em;
 }
 
-p, figcaption, time {
-  font-size: 1.1em;
-  line-height: 2;
-  margin-bottom: 1em;
+p, time {
+  font-size: 1.2em;
 }
 
 p a, p span {
   font-size: 1em; 
 }
 
-span, a {
-  font-size: 1.1em; 
+ol li, ul li {
+  margin-bottom: 0.5em;  
+  font-size: 1.5em;
 }
 
-span a, a span {
-  font-size: 1.1em;
-}
-
-li span {
+ol li p, ul li p {
   font-size: 1em;
 }
 
+ol li a, ul li a {
+  font-size: 1em;
+}
+
+span, a {
+  font-size: 1.2em; 
+}
+
+span a, a span {
+  font-size: 1.2em;
+}
 
 img {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
   max-width: 100%;
   height: auto;
-  /*pointer-events: none;*/
 }
 
-#backstretch{
-  display:none;
+span.icon-menu7 {
+  font-size: 1.2em;
+}
+
+img.avatar {
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+}
+
+blockquote {
+  margin:0;
+  font-size: 1.5em;
+  font-weight: bold;
+  font-style: italic;
+}
+
+p.welcome {
+  /*font-size: 5em;*/
+}
+
+#backstretch {
+  display: none;
 }
 
 /* ==========================================================================
@@ -137,241 +142,202 @@ img {
    ========================================================================== */
 
 a:link, a:visited {
+  font-weight: bold;
   color: black;
   text-decoration: none;
 }
 
-a:hover {
-  /*color: #AAA*/
+a:hover, a:active {
+  font-weight: bold;
+  /*text-decoration: underline;*/
 }
-
-a:active {
-  /*font-weight: bold; */
-}
-
 
 /* ==========================================================================
    Header
    ========================================================================== */
 
 header {
-  height: 100vh;
-  padding-bottom: 2em;
-  background: black;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  color: white; 
+  padding-top: 50px;
+  margin-bottom: 50px;
 }
 
-header h1 {
-  font-size: 1.2em;
-  letter-spacing: 2px;
-  margin-left: 25px;
-  margin-top: 25px;
-  margin-bottom: 0;
-  /*opacity: 0.75;*/
-  font-weight: normal;
-  color: black;
-
-}
-
-header h2 {
-  font-size: 1.2em;
-  text-align: center;
-}
-
-header img#play_button {
-  opacity: 0.5;
-}
-
-header div time {
-  display: block;
-  text-align: center;
-  margin-bottom: 0.5em;
-}
-
-header a:link, header a:visited {
-  color: black;
-  text-decoration: none;
-}
-
-header div.order {
-  width: 180px;
-  display: -webkit-flex;
-  -webkit-align-items: center; 
-  -webkit-justify-content: center;
-  margin: 0em auto 1em auto;
-  padding: 1em;
-  border: 1px solid #CCC;
-  border-radius: 10px;
-}
-
-header div.order:hover { 
-  cursor: pointer;
-  background: #444;
-  color: #FFF;
-  -webkit-transition-property:background; 
-  -webkit-transition-duration: 0.5s, 0.5s;
-  -webkit-transition-timing-function: linear, ease-out;
-}
-
-section .section-description .button {
-    border: 2px solid rgba(0, 0, 0, 0.75);
-    border-radius: 100px;
-    padding: 10px 15px 8px;
-    text-decoration: none;
-    margin: 0 0 0 10px;
-    outline: none
-}
-
-
+header a.selected:link, header a.selected:visited {
+  font-weight: bold;
+} 
 
 /* ==========================================================================
    Main
    ========================================================================== */
 
-article {
-  max-width: 600px;
-  margin: 0 auto;
-  padding-left: 5em;
-  padding-right: 5em;
+nav p {
+  margin-bottom: 0;
+  margin-top: 10px;
+  font-size: 4em;
 }
 
-section article h1 {
-  text-align: center;
+nav ul li {
+  list-style: none;
 }
 
-section article p {
-  text-align: left;
+p.address {
+  /*color: gray;*/
+  font-size: 1em;
+}
+
+div.social a {
+  /*color: gray;*/
+  font-size: 1em;
+}
+
+div.social a:link, div.social a:visited {
+  color: black;
+}
+
+div.social a:hover, div.social a:active {
+  /*color: gray;*/
 }
 
 
-section {
-  margin-top: 5em;
-  margin-bottom: 5em;
-  margin-left: auto;
-  margin-right: auto;  
-  display: -webkit-flex;
-  -webkit-align-items: center; 
-  -webkit-justify-content: center;
-  -webkit-flex-flow: column;
-}
+/* ==========================================================================
+   Footer
+   ========================================================================== */
 
-main section p.delimiter {
+footer {
   margin-top: 2em;
-  color: #999999;
+  padding-bottom: 25px;
 }
 
-main section p {
-  margin-left: 1em;
-  margin-right: 1em;
+footer p {
+  font-size: 1em;
 }
 
-main ul li {
-  opacity: 0.75;
-  font-size: 1.1em;
-  margin-right: 0.5em;
-  list-style-type: none;
-  margin-top: 2em;
-}
 
-main ul li {
-  display: -webkit-flex;
-  -webkit-align-items: center; 
-  -webkit-justify-content: center;
-  -webkit-flex-flow: column;
-}
+/* ==========================================================================
+   Media Queries
+   ========================================================================== */
 
-main ul div {
-  display: -webkit-flex;
-  -webkit-justify-content: center;
-}
+@media screen and (min-width: 1001px) {
 
-main ul li img {
-  display: block;
-  margin-bottom: 5px;
-}
+    body {
+      padding-left: 50px;
+    }
 
-main section.sold {
-}
+    nav p {
+      font-size: 5em;
+    }
 
-main section span.sale {
-  font-family: "Avenir", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
-  font-size: 8em;
-  padding-right: 10px;
 }
-
-main section.delivery div {
-  display: -webkit-flex;
-  -webkit-align-items: center; 
-  -webkit-justify-content: center;
-}
-
-main section.delivery div img {
-  margin: -1em 4em 4em 4em;
-}
-
-main section.team div {
-  /*display: -webkit-flex;*/
-  /*-webkit-align-items: center; */
-  /*-webkit-justify-content: center;*/
-}
-
-main section.team div p {
-  text-align: center;
-}
-
 
 </style>
 
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?e3715edd5fd142485f96876b4860952c";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 
-<script type="text/javascript" src="{site_url}libraries/js/jquery-1.11.3.min.js"></script>
-<script type="text/javascript" src="{site_url}libraries/js/jquery.backstretch.min.js"></script>
-<script type="text/javascript" src="{site_url}libraries/js/aos.js"></script>
-<script type="text/javascript" src="{site_url}libraries/js/site3.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-90740277-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+<script>
+  !function(g,s,q,r,d){r=g[r]=g[r]||function(){(r.q=r.q||[]).push(
+  arguments)};d=s.createElement(q);q=s.getElementsByTagName(q)[0];
+  d.src='//d1l6p2sc9645hc.cloudfront.net/tracker.js';q.parentNode.
+  insertBefore(d,q)}(window,document,'script','_gs');
+
+  _gs('GSN-097729-P');
+</script>
 
 </head>
 
 <body>
 
-<script>
-  AOS.init({
-      duration: 1000,
-      once: true
-  });
-</script>
+<header>
 
-<header  data-aos="fade-up">
+  <div class="language">
+    <a href="#">广州</a>&nbsp; / &nbsp; 
+    <a href="#">深圳</a> &nbsp; / &nbsp;
+    <a href="#">三亚</a>&nbsp; / &nbsp; 
+    <a href="#">海口</a>
 
-	<div>
-		<!-- <h1>照片書咖啡館</h1> -->
-		<!-- <p>Bag - 0</p>	 -->
-	</div>
-	
-	<div>
-		<!-- <p>讓一個人也要好好吃飯的便當</p> -->
-		<h2>「你好，初次見面。」</h2>
-    <!-- <h2>「Coming up soon...」</h2> -->
+  </div>
 
-
-		<!-- <p>也许有些话，不知道怎么说出口，那就用料理来好好表现吧！让每一口都是一句，谢谢！</p> -->
-	</div>
-	<!-- <img id="play_button" src="{site_url}libraries/icons/play_button.svg" alt=""> -->
-
-	<div>
-
-		<time>營業時間</time>
-
-		<div class="order">晚上7:00pm － 次日2:00pm</div>
-
-	</div>
-
-		<!-- <img id="backstretch" src="{site_url}assets/images/uploads/BAO-SOHO_Finalcropped.jpg"/> -->
-	
-	<img id="backstretch" src="{site_url}assets/images/uploads/DSCF8929-1.jpg"/>
+  <!-- <a href="{path="site/toc"}"><span class="icon-menu7"></span></a> -->
 
 </header>
+
+<main>
+    
+      <br>
+
+    <nav>
+        
+      <p class="welcome"><b>欢迎来到大屈</b></p>
+
+
+      <blockquote>“大直若屈；大巧若拙；大辩若讷。”——老子《道德经》</blockquote>
+      
+      <br>
+      <br>
+        
+        <p><a href="http://images.da-qu.com">大屈影像&#9756;</a></p>
+          <ul>
+            <li>写真</li>
+            <li>婚拍</li>
+          </ul>
+        
+        <p><a href="http://prints.da-qu.com">屈家印铺&#9756;</a></p>
+
+          <ul>
+            <li>印务</li>
+            <li>定制</li>
+          </ul>
+
+      <p><a href="http://suites.da-qu.com">小岛南舍&#9756;</a></p>
+    
+          <ul>
+            <li>民宿</li>
+            <li>咖啡</li>
+          </ul>
+
+    </nav>
+    
+
+    <br>
+    <br>
+<!-- 
+    <p class="address">
+        <strong>Da-Qu Travel &amp; Photography</strong><br>
+        Room 407, Yimei Building, Haikou<br>HAINAN, CHINA
+    </p>
+    
+ -->    <br>
+<!-- 
+    <div class="social">
+      <a href="#"><span class="icon-bubbles"></span></a>&nbsp;
+      <a href="#"><span class="icon-instagram"></span></a>
+    </div>
+     -->
+</main>
+
+
+<footer>
+
+    <p>Legals - 琼ICP备17000169号</p>
+
+</footer>
 
 </body>
 
